syntax = "proto2";

package netsceneregister;

option java_package = "com.cxy.oi.autogen";

option java_outer_classname = "NetSceneRegisterProto";

option java_multiple_files = true;


message NetSceneRegisterReq {
  optional bool nop = 1;  // no req body, this is for padding.

}

message NetSceneRegisterResp {
  optional uint32 usr_id = 1;

}
